src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>